--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,20 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+			    <!-- Build an executable JAR -->
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-jar-plugin</artifactId>
+			    <version>3.1.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <archive>
+			        <manifest>
+			            <addClasspath>true</addClasspath>
+			            <classpathPrefix>lib/</classpathPrefix>
+			            <mainClass>manipulator.Main</mainClass>
+			          </manifest>
+			        </archive>
                 </configuration>
             </plugin>
         </plugins>
